# safestic

./: .env  .env.example  .gitignore  BOOTSTRAP_GUIDE.md  COMANDOS.md  CREDENTIAL_SETUP_GUIDE.md  CREDENTIAL_SOURCE_FIX.md  LINUX_CREDENTIAL_TROUBLESHOOTING.md  LINUX_DEPENDENCY_FIX.md  LINUX_KEYRING_DIAGNOSIS.md  Makefile  README.md  SETUP_SAFESTIC.md  activate_venv.sh  auto_detect_credential_source.py  check-backup-health.sh  check_restic_access.py  debug_keyring_linux.py  diagnose_credentials.py  list_snapshot_files.py  list_snapshots.py  list_snapshots_with_size.py  main.py  manual_prune.py  pyproject.toml  repository_stats.py  requirements.txt  restic_backup.py  restore_file.py  restore_snapshot.py  safestic-backup.ps1  sitecustomize.py  test_linux_keyring.py  validate-setup.sh
docs/: AZURE_LINUX_TROUBLESHOOTING.md  LINUX_AZURE_QUICK_FIX.md  LINUX_KEYRING_TROUBLESHOOTING.md  QUICK_TROUBLESHOOTING_GUIDE.md  REFACTORING_IMPROVEMENTS.md
examples/: async_backup.py  secure_credentials.py  timestamped_restore.py
safestic/: __init__.py  cli.py
scripts/: Set-UTF8Encoding.ps1  backup_task.ps1  backup_task.sh  bootstrap_linux.sh  bootstrap_windows.ps1  check_credentials.py  check_mount_support.py  compare_configs.py  diagnose_azure_linux.py  forget_snapshots.py  health_check.py  mount_repo.py  prune_task.ps1  prune_task.sh  rebuild_index.py  repair_repo.py  schedule.ps1  schedule.sh  schedule_linux.sh  schedule_windows.ps1  setup_credentials.py  setup_linux.sh  setup_windows.sh  unmount_repo.py  validate_config.py  validate_setup.py  verify_environment.py
services/: __init__.py  credentials.py  env.py  logger.py  restic.py  restic_base.py  restic_client.py  restic_client_async.py  restic_common.py  restore_utils.py  script.py
test-backup/: test1.txt  test2.txt
tests/: __init__.py  conftest.py  test_azure_keyring.py  test_dependencies.py  test_keyring_credential_source.py  test_keyring_fix.py  test_logger.py  test_restic.py  test_restic_client.py
